clusters/home/apps/jellyfin/jellyfin/configs/jellyfin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingressroute
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://jellyfin.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Jellyfin
    gethomepage.dev/group: Entertainment
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/app: jellyfin # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Jellyfin
    #gethomepage.dev/widget.type: "jellyfin"
    # use .local domain name so we don't get blocked by authentik
    #gethomepage.dev/widget.url: "http://jellyfin.jellyfin.svc.cluster.local:8096"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: jellyfin
      port: 8096
  tls:
    secretName: jellyfin-certificate-secret
